--- a/plugin.xml
+++ b/plugin.xml
@@ -14,19 +14,13 @@
    <extension
          point="org.eclipse.ui.perspectives">
       <perspective
-            name="MUD Perspective"
+            name="JCM Perspective"
             class="org.mingy.jcm.ui.Perspective"
             id="org.mingy.jcm.ui.perspective">
       </perspective>
    </extension>
    <extension
          point="org.eclipse.ui.editors">
-      <editor
-            class="org.mingy.jmud.ui.SessionEditor"
-            contributorClass="org.mingy.jmud.ui.SessionEditorContributor"
-            id="org.mingy.jmud.ui.SessionEditor"
-            name="New Session">
-      </editor>
       <editor
             class="org.mingy.jcm.ui.TeacherEditor"
             id="org.mingy.jcm.ui.TeacherEditor"
@@ -85,7 +79,7 @@
             name="Courses Manager for Java">
          <property
                name="aboutText"
-               value="Courses Manager for Java created by PDE">
+               value="Courses Manager for Java">
          </property>
          <property
                name="windowImages"
