--- a/.classpath
+++ b/.classpath
@@ -19,7 +19,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/hibernate-core-3.3.2.GA.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/hibernate-entitymanager-3.4.0.GA.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/javassist-3.4.GA.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/spring-core-2.5.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/spring-core-2.5.6.jar" sourcepath="E:/m2/repository/org/springframework/spring-core/2.5.6/spring-core-2.5.6-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/spring-beans-2.5.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/spring-aop-2.5.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/spring-context-2.5.6.jar"/>
