修改发布运行不了的bug

--- a/build.properties
+++ b/build.properties
@@ -6,5 +6,7 @@ bin.includes = plugin.xml,\
                jcm.product,\
                icons/,\
                LICENSE-2.0.txt,\
-               lib/
+               lib/,\
+               lib/jta-1.1.jar,\
+               lib/antlr-2.7.6.jar
 javacDefaultEncoding.. = UTF-8
