中文翻译 完成教师的增删改 完成资源浏览和编辑器的互动

--- a/src/i18n.properties
+++ b/src/i18n.properties
@@ -1,8 +1,12 @@
 sex.label.0=\u7537
 sex.label.1=\u5973
-sex.label.2=\u672A\u77E5
+sex.label.2=\u672a\u77e5
 
-resource.type.label.0=\u8D44\u6E90
-resource.type.label.1=\u6559\u5E08
-resource.type.label.2=\u8BFE\u7A0B
-resource.type.label.3=\u5B66\u751F
+resource.type.label.0=\u8d44\u6e90
+resource.type.label.1=\u6559\u5e08
+resource.type.label.2=\u8bfe\u7a0b
+resource.type.label.3=\u5b66\u751f
+
+system.title=\u827a\u6821\u8bfe\u7a0b\u7ba1\u7406\u7cfb\u7edf
+confirm.delete_teacher.title=\u5220\u9664\u6559\u5e08\u786e\u8ba4
+confirm.delete_teacher.message=\u6559\u5e08\u5220\u9664\u540e\u5c06\u65e0\u6cd5\u6062\u590d\uff0c\u5982\u679c\u60a8\u53ea\u662f\u60f3\u5ffd\u7565\u8be5\u6559\u5e08\uff0c\u53ef\u4ee5\u4fee\u6539\u4e3a\u5931\u6548\u3002\n\u4f60\u786e\u5b9a\u8981\u5220\u9664\u6559\u5e08\u201c{0}\u201d\u5417\uff1f
