从jsfs同步代码

--- a/src/i18n.properties
+++ b/src/i18n.properties
@@ -8,5 +8,13 @@ resource.type.label.2=\u8bfe\u7a0b
 resource.type.label.3=\u5b66\u751f
 
 system.title=\u827a\u6821\u8bfe\u7a0b\u7ba1\u7406\u7cfb\u7edf
-confirm.delete_teacher.title=\u5220\u9664\u6559\u5e08\u786e\u8ba4
+error.input.title=\u8f93\u5165\u9519\u8bef
+error.input.message={0}
+error.save.title=\u4fdd\u5b58\u5931\u8d25
+error.save.message=\u5931\u8d25\u539f\u56e0\u5982\u4e0b\n{0}
+confirm.save.title=\u4fdd\u5b58\u786e\u8ba4
+confirm.save.message.onRefresh=\u5237\u65b0\u524d\u5fc5\u987b\u5148\u4fdd\u5b58\u6240\u6709\u4fee\u6539\u7684\u5185\u5bb9\uff0c\u662f\u5426\u4fdd\u5b58\u6240\u6709\u4fee\u6539\uff1f
+error.delete.title=\u5220\u9664\u5931\u8d25
+error.delete.message=\u5931\u8d25\u539f\u56e0\u5982\u4e0b\n{0}
+confirm.delete.title=\u5220\u9664\u786e\u8ba4
 confirm.delete_teacher.message=\u6559\u5e08\u5220\u9664\u540e\u5c06\u65e0\u6cd5\u6062\u590d\uff0c\u5982\u679c\u60a8\u53ea\u662f\u60f3\u5ffd\u7565\u8be5\u6559\u5e08\uff0c\u53ef\u4ee5\u4fee\u6539\u4e3a\u5931\u6548\u3002\n\u4f60\u786e\u5b9a\u8981\u5220\u9664\u6559\u5e08\u201c{0}\u201d\u5417\uff1f
