--- a/src/validationMessages.properties
+++ b/src/validationMessages.properties
@@ -1,3 +1,17 @@
-name.NotNull=\u59D3\u540D\u4E0D\u80FD\u4E3A\u7A7A
-name.MaxLength=\u59D3\u540D\u4E0D\u80FD\u8D85\u8FC7{max}\u4E2A\u5B57
-sex.NotNull=\u6027\u522B\u4E0D\u80FD\u4E3A\u7A7A
+name.NotNull=\u59d3\u540d\u4e0d\u80fd\u4e3a\u7a7a
+name.MaxLength=\u59d3\u540d\u4e0d\u80fd\u8d85\u8fc7{max}\u4e2a\u5b57
+sex.NotNull=\u6027\u522b\u4e0d\u80fd\u4e3a\u7a7a
+contacts.MaxLength=\u8054\u7cfb\u65b9\u5f0f\u4e0d\u80fd\u8d85\u8fc7{max}\u4e2a\u5b57
+specialty.MaxLength=\u4e13\u4e1a\u65b9\u5411\u4e0d\u80fd\u8d85\u8fc7{max}\u4e2a\u5b57
+address.MaxLength=\u5730\u5740\u4e0d\u80fd\u8d85\u8fc7{max}\u4e2a\u5b57
+course.code.NotNull=\u8bfe\u7a0b\u7f16\u53f7\u4e0d\u80fd\u4e3a\u7a7a
+course.code.WrongFormat=\u8bfe\u7a0b\u7f16\u53f7\u7684\u683c\u5f0f\u4e0d\u6b63\u786e
+course.code.MaxLength=\u8bfe\u7a0b\u7f16\u53f7\u4e0d\u80fd\u8d85\u8fc7{max}\u4e2a\u5b57
+course.name.NotNull=\u8bfe\u7a0b\u540d\u79f0\u4e0d\u80fd\u4e3a\u7a7a
+course.name.MaxLength=\u8bfe\u7a0b\u540d\u79f0\u4e0d\u80fd\u8d85\u8fc7{max}\u4e2a\u5b57
+teacher.NotNull=\u6267\u6559\u8001\u5e08\u4e0d\u80fd\u4e3a\u7a7a
+classroom.MaxLength=\u4e0a\u8bfe\u5730\u70b9\u4e0d\u80fd\u8d85\u8fc7{max}\u4e2a\u5b57
+schedule.MaxLength=\u4e0a\u8bfe\u65f6\u95f4\u4e0d\u80fd\u8d85\u8fc7{max}\u4e2a\u5b57
+times.LargerThanZero=\u603b\u8bfe\u6b21\u5fc5\u987b\u5927\u4e8e0
+price.NotLessThanZero=\u4ef7\u683c\u4e0d\u80fd\u5c0f\u4e8e0
+materialFee.NotLessThanZero=\u6750\u6599\u8d39\u4e0d\u80fd\u5c0f\u4e8e0
